02-Challenge/Develop/assets/css/style.css
* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
}

body {
  background-color: #d9dcd6;
  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
    "Lucida Sans", Arial, sans-serif;
}

header h1 {
  display: inline-block;
  font-size: 48px;
}

header h1 .seo {
  color: #d9dcd6;
}

nav {
  padding-top: 15px;
  margin-right: 20px;
  float: right;
}

nav ul {
  list-style-type: none;
}

nav ul li {
  display: inline-block;
  margin-left: 25px;
}

a {
  color: #ffffff;
  text-decoration: none;
}

p,
h2,
h3 {
  font-size: 16px;
}

.hero {
  height: 800px;

  background-image: url("../images/digital-marketing-meeting.jpg");
  background-size: cover;
  background-position: center;
}

.float-left,
.float-right {
  margin: 25px;
}

main {
  background-color: #0072bb;
  color: #ffffff;
}

main > section {
  margin-bottom: 20px;
  padding: 50px;
  font-size: 16px;
}

aside {
  margin-right: 20px;
  float: right;
  width: 20%;
  background-color: #2589bd;
}

aside article {
  margin-bottom: 32px;
}

aside h3 {
  margin-bottom: 10px;
  text-align: center;
}
aside img {
  display: block;
  margin: 10px auto;
  max-width: 150px;
}

footer {
  clear: both;
  text-align: center;
  background-color: #2a607c;
}

footer h2 {
  font-size: 20px;
}

article img,
section img {
  max-height: 200px;
}

.search-engine-optimization,
.online-reputation-management,
.social-media-marketing {
  background-color: #0072bb;
  color: white;
}

.search-engine-optimization h2,
.online-reputation-management h2,
.social-media-marketing h2,
.benefit-lead h3,
.benefit-brand h3,
.benefit-cost h3 {
  font-size: 36px;
}

